# math-of-ml

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
impl/linear_algebra/: lu_solver.cpp  matrix.cpp  matrix.hpp  qr_gram_schmidt.cpp
paper/: main.tex  preamble.tex  references.bib
paper/chapters/: 01_linear_algebra.tex  02_calculus.tex  03_probability.tex  04_neural_networks.tex
weekly/: calculus.tex  linear_algebra.tex  neural_networks.tex  probability.tex
