[project]
name = "math-of-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "rickdisi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
